--- a/basketball.css
+++ b/basketball.css
@@ -5,7 +5,13 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+
+     ul li::marker {
+    color: var(--clr-Rose-800);
+  }
 }
+
+
 
 body {
     display: flex;
@@ -16,28 +22,65 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
+
 section {
-    display: flex;
+ display: flex;
+
+
 }
 
 section > div:nth-child(2) {
     padding-left: 150px;
+
+
 }
 
-#homeScore, #awayScore {
+
+
+
+#homeScore {
     font-size: 5rem;
     background-color: black;
     color: #35FF69;
-    font-family: "Doto", sans-serif;
+    font-family: "Doto", "Montserrat", sans-serif;
     border-radius: 10px;
+    height: auto;
+    width: auto;
     border: none;
     padding: 20px;
     margin: 0;
     font-weight: bold;
+
+
 }
 
+
 #awayScore {
+    font-size: 5rem;
+    background-color: black;
     color: rgba(249,79,109,1);
+    font-family: "Doto", "Montserrat", sans-serif;
+    border-radius: 10px;
+    height: auto;
+    width: auto;
+    border: none;
+    padding: 20px;
+    margin: 0;
+    font-weight: bold;
+
+
+}
+
+#awayScore:hover {
+    cursor: default;
+}
+
+#homeScore:active {
+    transform: scale(1);
+}
+
+#homeScore:hover {
+    cursor: default;
 }
 
 h2 {
@@ -51,9 +94,16 @@ h2 {
     transition: 0.7s;
 }
 
+
 h2:hover {
     color: #D81E5B;
     transition: 0.7s;
+}
+
+
+.guest > div > button:hover {
+    background-color: #D81E5B;
+    transition: 0.5s;
 }
 
 button {
@@ -61,43 +111,63 @@ button {
     height: 35px;
     background-color: transparent;
     border-radius: 5px;
-    border: solid rgba(154, 171, 216, 1);
+    border-color: rgba(154, 171, 216, 1);
     color: rgba(154, 171, 216, 1);
-    font-family: "Doto", sans-serif;
-    font-size: 1rem;
+    border-style: solid;
     margin-top: 20px;
+    font-family: "Doto", "Montserrat", sans-serif;
+    font-size: 1rem;
 }
 
 button:hover {
     background-color: #35FF69;
     transition: 0.5s;
+    cursor: pointer;
 }
 
 button:active {
     transform: scale(0.8);
+
 }
 
 .reset:active {
     transform: scale(0.8);
 }
 
+.reset:hover {
+    cursor: default;
+}
+
 .reset {
     width: 60px;
 }
 
-.home, .guest {
+.home {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-@media (max-width: 750px) {
+.guest {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+
+@media (min-width: 200px) and (max-width: 750px) {
     section {
+        display: flex;
         flex-direction: column;
     }
 
     section > div:nth-child(2) {
         padding-left: 0;
         padding-top: 40px;
+    
+    
     }
-}
+
+    
+  }
