--- a/style.css
+++ b/style.css
@@ -5,13 +5,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-
-     ul li::marker {
-    color: var(--clr-Rose-800);
-  }
 }
-
-
 
 body {
     display: flex;
@@ -22,23 +16,15 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
-
 section {
- display: flex;
-
-
+    display: flex;
 }
 
 section > div:nth-child(2) {
     padding-left: 150px;
-
-
 }
 
-
-
-
-#homeScore {
+#homeScore, #awayScore {
     font-size: 5rem;
     background-color: black;
     color: #35FF69;
@@ -50,36 +36,13 @@ section > div:nth-child(2) {
     padding: 20px;
     margin: 0;
     font-weight: bold;
-
-
 }
-
 
 #awayScore {
-    font-size: 5rem;
-    background-color: black;
     color: rgba(249,79,109,1);
-    font-family: "Doto", "Montserrat", sans-serif;
-    border-radius: 10px;
-    height: auto;
-    width: auto;
-    border: none;
-    padding: 20px;
-    margin: 0;
-    font-weight: bold;
-
-
 }
 
-#awayScore:hover {
-    cursor: default;
-}
-
-#homeScore:active {
-    transform: scale(1);
-}
-
-#homeScore:hover {
+#awayScore:hover, #homeScore:hover {
     cursor: default;
 }
 
@@ -93,13 +56,6 @@ h2 {
     color: #35FF69;
     transition: 0.7s;
 }
-
-
-h2:hover {
-    color: #D81E5B;
-    transition: 0.7s;
-}
-
 
 .guest > div > button:hover {
     background-color: #D81E5B;
@@ -125,12 +81,7 @@ button:hover {
     cursor: pointer;
 }
 
-button:active {
-    transform: scale(0.8);
-
-}
-
-.reset:active {
+button:active, .reset:active {
     transform: scale(0.8);
 }
 
@@ -142,32 +93,19 @@ button:active {
     width: 60px;
 }
 
-.home {
+.home, .guest {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-.guest {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
-
 
 @media (min-width: 200px) and (max-width: 750px) {
     section {
         display: flex;
         flex-direction: column;
     }
-
     section > div:nth-child(2) {
         padding-left: 0;
         padding-top: 40px;
-    
-    
     }
-
-    
-  }
+}
